Fixed table alignment and Image ratio

--- a/packages/scandipwa/src/component/Image/Image.style.scss
+++ b/packages/scandipwa/src/component/Image/Image.style.scss
@@ -61,7 +61,7 @@
         height: 100%;
 
         td & {
-            min-height: 100%;
+            height: auto;
             display: block;
             margin: auto;
         }
